cluster/nginx-ingress/raw.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-ingress","namespace":"nginx-ingress"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"nginx-ingress"}},"template":{"metadata":{"labels":{"app":"nginx-ingress"}},"spec":{"containers":[{"args":["-nginx-plus","-nginx-configmaps=$(POD_NAMESPACE)/nginx-config","-default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret"],"env":[{"name":"POD_NAMESPACE","valueFrom":{"fieldRef":{"fieldPa [...]
  creationTimestamp: 2018-11-16T16:44:49Z
  generation: 19
  labels:
    app: nginx-ingress
  name: nginx-ingress
  namespace: nginx-ingress
  resourceVersion: "6047131"
  selfLink: /apis/extensions/v1beta1/namespaces/nginx-ingress/deployments/nginx-ingress
  uid: eeb6b84b-e9be-11e8-8bb7-0a58ac1f06cd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-ingress
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-ingress
    spec:
      containers:
      - args:
        - -nginx-plus
        - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
        - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
        image: azuresample.azurecr.io/nginx-plus-ingress:edge
        imagePullPolicy: Always
        name: nginx-plus-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 8080
          name: dash
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: nginx-ingress
      serviceAccountName: nginx-ingress
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-11-16T17:04:59Z
    lastUpdateTime: 2018-11-16T21:58:18Z
    message: ReplicaSet "nginx-ingress-74d6cbd6f9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2018-11-28T13:54:35Z
    lastUpdateTime: 2018-11-28T13:54:35Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 19
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
